# codeforge

./: README.md  pyproject.toml
src/codeforge/: __init__.py  challenge.py  cli.py  compare.py  config.py  git_ops.py  hints.py  journal.py  models.py  retro.py  review.py  stats.py  submission.py  workspace.py
src/codeforge/challenges/: __init__.py  fastapi-bug-12.yaml  fastapi-bug-16.yaml  fastapi-bug-4.yaml  fastapi-bug-7.yaml  flask-binary-io.yaml  httpx-url-quoting.yaml  requests-tls-pool.yaml  scrapy-bug-14.yaml  scrapy-bug-17.yaml  scrapy-bug-2.yaml  scrapy-bug-20.yaml  scrapy-bug-28.yaml  scrapy-bug-32.yaml  scrapy-bug-4.yaml  scrapy-bug-40.yaml  thefuck-bug-1.yaml  thefuck-bug-18.yaml  thefuck-bug-8.yaml
